--- a/k8s/charts/meerkat-dsa/templates/signing.secret.yaml
+++ b/k8s/charts/meerkat-dsa/templates/signing.secret.yaml
@@ -17,4 +17,16 @@ type: kubernetes.io/tls
 data:
   tls.crt: {{ $keypair.Cert | b64enc }}
   tls.key: {{ $keypair.Key | b64enc }}
+{{- if and (gt .Values.replicas 1) (empty .Values.signingCaConfigName) }}
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: {{ include "meerkat-dsa.fullname" . }}-signing-ca
+  labels:
+    {{- include "meerkat-dsa.labels" . | nindent 4 }}
+data:
+  ca.pem: |
+{{ $keypair.Cert | indent 4 }}
+{{- end }}
 {{- end }}
