fix(meerkat): names starting with underscores in logs

--- a/apps/meerkat/project.json
+++ b/apps/meerkat/project.json
@@ -34,7 +34,8 @@
                     },
                     "footer": {
                         "js": "// Minified Meerkat DSA Javascript Source - Copyright (c) Wildboar Software 2025 - MIT License"
-                    }
+                    },
+                    "keepNames": true
                 },
                 "assets": [
                     {
