test(ocsp-client): get tests working again

--- a/libs/ocsp-client/project.json
+++ b/libs/ocsp-client/project.json
@@ -15,6 +15,13 @@
                 "main": "libs/ocsp-client/src/index.ts",
                 "assets": ["libs/ocsp-client/*.md"]
             }
+        },
+        "test": {
+            "executor": "@nx/vitest:test",
+            "outputs": ["{options.reportsDirectory}"],
+            "options": {
+                "reportsDirectory": "../../coverage/libs/ocsp-client"
+            }
         }
     }
 }
