test(ocsp-client): fix missing typescript types

--- a/libs/ocsp-client/tsconfig.spec.json
+++ b/libs/ocsp-client/tsconfig.spec.json
@@ -3,7 +3,11 @@
     "compilerOptions": {
         "outDir": "../../dist/out-tsc",
         "types": [
-            "node"
+            "vitest/globals",
+            "vitest/importMeta",
+            "vite/client",
+            "node",
+            "vitest"
         ]
     },
     "include": [
