--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@logtape/logtape": "npm:@jsr/logtape__logtape@^2.0.1",
     "@logtape/syslog": "npm:@jsr/logtape__syslog@^2.0.1",
     "@mdx-js/react": "3.1.1",
-    "@prisma/adapter-libsql": "^7.4.0",
-    "@prisma/client": "^7.4.0",
+    "@prisma/adapter-libsql": "7.3.0",
+    "@prisma/client": "7.3.0",
     "@std/html": "npm:@jsr/std__html@^1.0.5",
     "@std/semver": "npm:@jsr/std__semver@^1.0.8",
     "@std/yaml": "npm:@jsr/std__yaml@^1.0.11",
@@ -114,7 +114,7 @@
     "jsdom": "~22.1.0",
     "json-schema-to-typescript": "^11.0.2",
     "nx": "22.5.0",
-    "prisma": "^7.4.0",
+    "prisma": "7.3.0",
     "sloc": "^0.3.2",
     "ts-node": "10.9.1",
     "tslib": "^2.4.1",
