--- a/libs/rose-transport/package.json
+++ b/libs/rose-transport/package.json
@@ -1,4 +1,9 @@
 {
     "name": "@wildboar/rose-transport",
-    "version": "1.2.0"
+    "version": "1.2.0",
+    "license": "MIT",
+    "dependencies": {
+        "@wildboar/asn1": "npm:@jsr/wildboar__asn1@^11.0.4",
+        "@wildboar/x500": "npm:@jsr/wildboar__x500@^2.0.4"
+    }
 }
