--- a/libs/x500-client-ts/package.json
+++ b/libs/x500-client-ts/package.json
@@ -1,4 +1,15 @@
 {
     "name": "@wildboar/x500-client-ts",
-    "version": "1.1.1"
+    "version": "1.1.1",
+    "license": "MIT",
+    "dependencies": {
+        "@wildboar/asn1": "npm:@jsr/wildboar__asn1@^11.0.4",
+        "@wildboar/x500": "npm:@jsr/wildboar__x500@^2.0.4",
+        "@wildboar/acse": "npm:@jsr/wildboar__acse@^2.0.0",
+        "@wildboar/copp": "npm:@jsr/wildboar__copp@^2.0.0",
+        "@wildboar/osi-net": "npm:@jsr/wildboar__osi-net@^1.0.1",
+        "@wildboar/rose-transport": "npm:@jsr/wildboar__rose-transport@^1.2.0",
+        "@wildboar/ldap": "npm:@jsr/wildboar__ldap@^2.0.1",
+        "@wildboar/idm": "npm:@jsr/wildboar__idm@^2.0.0"
+    }
 }
