ci(x500-client-ts): fix missing dependencies

--- a/libs/x500-client-ts/package.json
+++ b/libs/x500-client-ts/package.json
@@ -10,6 +10,8 @@
         "@wildboar/osi-net": "npm:@jsr/wildboar__osi-net@^1.0.1",
         "@wildboar/rose-transport": "npm:@jsr/wildboar__rose-transport@^1.2.0",
         "@wildboar/ldap": "npm:@jsr/wildboar__ldap@^2.0.1",
-        "@wildboar/idm": "npm:@jsr/wildboar__idm@^3.1.2"
+        "@wildboar/idm": "npm:@jsr/wildboar__idm@^3.1.2",
+        "@wildboar/pki-stub": "npm:@jsr/wildboar__pki-stub@^2.0.2",
+        "@wildboar/safecurves-pkix-18": "npm:@jsr/wildboar__safecurves-pkix-18@^2.0.0"
     }
 }
