--- a/libs/ocsp-client/package.json
+++ b/libs/ocsp-client/package.json
@@ -7,5 +7,8 @@
         "@wildboar/ocsp": "npm:@jsr/wildboar__ocsp@^2.0.1",
         "@wildboar/pki-stub": "npm:@jsr/wildboar__pki-stub@^2.0.2",
         "@wildboar/x500": "npm:@jsr/wildboar__x500@^2.0.4"
+    },
+    "devDependencies": {
+        "@wildboar/pem": "npm:@jsr/wildboar__pem@^4.0.2"
     }
 }
