--- a/libs/x500-auth-ts/package.json
+++ b/libs/x500-auth-ts/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@wildboar/asn1": "npm:@jsr/wildboar__asn1@^11.0.4",
         "@wildboar/x500": "npm:@jsr/wildboar__x500@^2.0.4",
-        "@wildboar/rose-transport": "npm:@jsr/wildboar__rose-transport@^1.2.0"
+        "@wildboar/rose-transport": "npm:@jsr/wildboar__rose-transport@^1.2.0",
+        "@wildboar/x500-client-ts": "npm:@jsr/wildboar__x500-client-ts@^1.1.1"
     }
 }
