--- a/libs/ocsp-client/tsconfig.lib.json
+++ b/libs/ocsp-client/tsconfig.lib.json
@@ -6,6 +6,7 @@
         "types": ["node"]
     },
     "exclude": [
+        "**/*.denotest.ts",
         "**/*.spec.ts",
         "**/*.test.ts",
         "vite.config.ts",
