--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -108,6 +108,7 @@ bulk_insert_mode: false
 # client_cert_engine: pkcs11
 chaining_check_sig: true
 chaining_sign_requests: true
+chaining_strong_creds_ttl: 60
 chaining_tls_optional: false
 # clearance_authorities: /path/to/trust-anchor-list.pem
 default_entry_ttl: 60
