--- a/k8s/charts/meerkat-dsa/templates/config.yaml
+++ b/k8s/charts/meerkat-dsa/templates/config.yaml
@@ -32,6 +32,7 @@ data:
   {{- end }}
   enable_dap: {{ .Values.enable_dap | ternary 1 0 | quote }}
   entries_per_subordinates_page: {{ .Values.entries_per_subordinates_page | default 100 | quote }}
+  fetch_remote_authz_attrs: {{ .Values.fetch_remote_authz_attrs | ternary 1 0 | quote }}
   forbid_anonymous_bind: {{ .Values.forbid_anonymous_bind | ternary 1 0 | quote }}
   get_clearances_from_attr_certs: {{ .Values.get_clearances_from_attr_certs | default true | ternary 1 0 | quote }}
   get_clearances_from_dsait: {{ .Values.get_clearances_from_dsait | default true | ternary 1 0 | quote }}
@@ -130,6 +131,7 @@ data:
   private_key_engine: {{ .Values.private_key_engine }}
   {{- end }}
   prohibit_chaining: {{ .Values.prohibit_chaining | ternary 1 0 | quote }}
+  remote_pwd_local_scope: {{ .Values.remote_pwd_local_scope | ternary 1 0 | quote }}
   remote_pwd_time_limit: {{ .Values.remote_pwd_time_limit | default 0 | quote }}
   request_cross_references: {{ .Values.request_cross_references | ternary 1 0 | quote }}
   return_cross_references: {{ .Values.return_cross_references | ternary 1 0 | quote }}
