--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -191,6 +191,7 @@ request_cross_references: false
 return_cross_references: false
 reveal_user_pwd: false
 scr_parallelism: 0
+shadow_secondary_replica_update_concurrency: 2
 # scvp_attr_cert_checks:
 #   - "2.5.4.3"
 # scvp_attr_cert_want_backs:
