--- a/k8s/charts/meerkat-dsa/templates/config.yaml
+++ b/k8s/charts/meerkat-dsa/templates/config.yaml
@@ -139,6 +139,7 @@ data:
   reveal_user_pwd: {{ .Values.reveal_user_pwd | default false | ternary 1 0 | quote }}
   scr_parallelism: {{ .Values.scr_parallelism | default 0 | quote }}
   shadow_secondary_replica_update_concurrency: {{ .Values.shadow_secondary_replica_update_concurrency | default 2 | quote }}
+  shadow_total_refresh_deletion_page_size: {{ .Values.shadow_total_refresh_deletion_page_size | default 100 | quote }}
   {{- if .Values.scvp_attr_cert_checks }}
   # NOTE: The `join` function is not documented currently.
   # See: https://stackoverflow.com/questions/47668793/helm-generate-comma-separated-list
