--- a/k8s/charts/meerkat-dsa/templates/statefulset.yaml
+++ b/k8s/charts/meerkat-dsa/templates/statefulset.yaml
@@ -659,6 +659,12 @@ spec:
                   name: {{ include "meerkat-dsa.fullname" . }}-config
                   key: shadow_secondary_replica_update_concurrency
                   optional: true
+            - name: MEERKAT_SHADOW_TOTAL_REFRESH_DELETION_PAGE_SIZE
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ include "meerkat-dsa.fullname" . }}-config
+                  key: shadow_total_refresh_deletion_page_size
+                  optional: true
             - name: MEERKAT_SCVP_ATTR_CERT_CHECKS
               valueFrom:
                 configMapKeyRef:
